@startuml
 class InventoryManagementApplication{
    void start();
    void main();
 }

 class item{
    -String serialNum
    -String name
    -String value

    +item(String serial, String name, String value);
    +getTempString();
    +setTempString(String temp);
    +getSerialNum();
    +setSerialNum(String serialNum);
    +getName();
    +setName(String name);
    +getValue();
    +setValue(String value);


 }

 class ItemManager{
    +Static Void infoBox();
    +ObservableList getList();
    +FilteredList getFilterList();

    +Boolean serialValidation(String serial)
    +Boolean nameValidation(String name);
    +Boolean valueValidation(String value);

    +void addItem();
    +void removeItem();
    +void clearList();

    +void saveListTSV();
    +void saveListHTML();
    +void saveListJSON();

    +void loadListTSV();
    +void loadListHTML();
    +void loadListJSON();

 }

InventoryManagementApplication --> ItemManager
ItemManager --> item

@enduml